--- a/index.html
+++ b/index.html
@@ -14,56 +14,69 @@
 
 
 <div class="body-wrap">
-
-        <div class="blobBackground"></div>
+    <div class="blobBackground"></div>
 
     <div class="content">
-        <div class="header">
-            <h1></h1>
+
+
+        <div class="parent">
+            <div class="div1">a</div>
+            <div class="div2">
+
+            </div>
+            <div class="div3"> c</div>
+            <div class="div4">
+                <nav class="menu">
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="div5"></div>
+            <div class="div6"></div>
+            <div class="div7"></div>
+            <div class="div8"></div>
+            <div class="div9"></div>
         </div>
-        <nav>
-    <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#contact">Contact</a></li>
-    </ul>
-</nav>
 
-<div class="content">
-    <div id="home" class="page active">
-        <h2>Home</h2>
-        <p>This is the home page content.</p>
-    </div>
-    <div id="about" class="page">
-        <h2>About Us</h2>
-        <p>This is the about page content.</p>
-    </div>
-    <div id="services" class="page">
-        <h2>Our Services</h2>
-        <p>This is the services page content.</p>
-    </div>
-    <div id="contact" class="page">
-        <h2>Contact Us</h2>
-        <p>This is the contact page content.</p>
-    </div>
-</div>
 
-<script>
-    $(function() {
-        // Initially show home page
-        $('.page').removeClass('active');
-        $('#home').addClass('active');
+        <div class="content">
+            <div id="home" class="page active">
+                <h2>Home</h2>
+                <p>This is the home page content.</p>
+            </div>
+            <div id="about" class="page">
+                <h2>About Us</h2>
+                <p>This is the about page content.</p>
+            </div>
+            <div id="services" class="page">
+                <h2>Our Services</h2>
+                <p>This is the services page content.</p>
+            </div>
+            <div id="contact" class="page">
+                <h2>Contact Us</h2>
+                <p>This is the contact page content.</p>
+            </div>
+        </div>
 
-        // Handle navigation
-        $('nav a').on('click', function(event) {
-            event.preventDefault();
-            let  targetPage = $(this).attr('href');
-            $('.page').removeClass('active');
-            $(targetPage).addClass('active');
-        });
-    });
-</script>
+        <script>
+            $(function () {
+                // Initially show home page
+                $('.page').removeClass('active');
+                $('#home').addClass('active');
+
+                // Handle navigation
+                $('nav a').on('click', function (event) {
+                    event.preventDefault();
+                    let targetPage = $(this).attr('href');
+                    $('.page').removeClass('active');
+                    $(targetPage).addClass('active');
+                });
+            });
+        </script>
     </div>
 </div>
 </body>
