--- a/index.html
+++ b/index.html
@@ -1,84 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title> Drink Good, Live Well</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+          rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <script
-            src="https://code.jquery.com/jquery-3.7.1.js"
-            integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
-            crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <title>DR Drink</title>
 </head>
-
 <body>
+<nav class="navbar">
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a href="#" class="nav-link">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
+                    <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                    <path d="M294.2 1.2c5.1 2.1 8.7 6.7 9.6 12.1l10.4 62.4c-23.3 10.8-42.9 28.4-56 50.3c-14.6-9-31.8-14.1-50.2-14.1c-53 0-96 43-96 96c0 35.5 19.3 66.6 48 83.2c.8 31.8 13.2 60.7 33.1 82.7l-56 39.2c-4.5 3.2-10.3 3.8-15.4 1.6s-8.7-6.7-9.6-12.1L98.1 317.9 13.4 303.8c-5.4-.9-10-4.5-12.1-9.6s-1.5-10.9 1.6-15.4L52.5 208 2.9 137.2c-3.2-4.5-3.8-10.3-1.6-15.4s6.7-8.7 12.1-9.6L98.1 98.1l14.1-84.7c.9-5.4 4.5-10 9.6-12.1s10.9-1.5 15.4 1.6L208 52.5 278.8 2.9c4.5-3.2 10.3-3.8 15.4-1.6zM208 144c13.8 0 26.7 4.4 37.1 11.9c-1.2 4.1-2.2 8.3-3 12.6c-37.9 14.6-67.2 46.6-77.8 86.4C151.8 243.1 144 226.5 144 208c0-35.3 28.7-64 64-64zm69.4 276c11 7.4 14 22.3 6.7 33.3l-32 48c-7.4 11-22.3 14-33.3 6.7s-14-22.3-6.7-33.3l32-48c7.4-11 22.3-14 33.3-6.7zm96 0c11 7.4 14 22.3 6.7 33.3l-32 48c-7.4 11-22.3 14-33.3 6.7s-14-22.3-6.7-33.3l32-48c7.4-11 22.3-14 33.3-6.7zm96 0c11 7.4 14 22.3 6.7 33.3l-32 48c-7.4 11-22.3 14-33.3 6.7s-14-22.3-6.7-33.3l32-48c7.4-11 22.3-14 33.3-6.7zm96 0c11 7.4 14 22.3 6.7 33.3l-32 48c-7.4 11-22.3 14-33.3 6.7s-14-22.3-6.7-33.3l32-48c7.4-11 22.3-14 33.3-6.7zm74.5-116.1c0 44.2-35.8 80-80 80H288c-53 0-96-43-96-96c0-47.6 34.6-87 80-94.6l0-1.3c0-53 43-96 96-96c34.9 0 65.4 18.6 82.2 46.4c13-9.1 28.8-14.4 45.8-14.4c44.2 0 80 35.8 80 80c0 5.9-.6 11.7-1.9 17.2c37.4 6.7 65.8 39.4 65.8 78.7z"/>
+                </svg>
+                <span class="link-text">Weather
+                </span>
+            </a>
+        </li>
+
+        <li class="nav-item">
+            <a href="#" class="nav-link">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                    <path d="M32 0C19.1 0 7.4 7.8 2.4 19.8s-2.2 25.7 6.9 34.9L224 269.3V448H160c-17.7 0-32 14.3-32 32s14.3 32 32 32h96 96c17.7 0 32-14.3 32-32s-14.3-32-32-32H288V269.3L502.6 54.6c9.2-9.2 11.9-22.9 6.9-34.9S492.9 0 480 0H32zM173.3 128l-64-64H402.7l-64 64H173.3z"/>
+                </svg>
+                <span class="link-text">Cocktails
+                </span>
+            </a>
+        </li>
+
+        <li class="nav-item">
+            <a href="#" class="nav-link">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
+                    <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                    <path d="M72 88a56 56 0 1 1 112 0A56 56 0 1 1 72 88zM64 245.7C54 256.9 48 271.8 48 288s6 31.1 16 42.3V245.7zm144.4-49.3C178.7 222.7 160 261.2 160 304c0 34.3 12 65.8 32 90.5V416c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V389.2C26.2 371.2 0 332.7 0 288c0-61.9 50.1-112 112-112h32c24 0 46.2 7.5 64.4 20.3zM448 416V394.5c20-24.7 32-56.2 32-90.5c0-42.8-18.7-81.3-48.4-107.7C449.8 183.5 472 176 496 176h32c61.9 0 112 50.1 112 112c0 44.7-26.2 83.2-64 101.2V416c0 17.7-14.3 32-32 32H480c-17.7 0-32-14.3-32-32zm8-328a56 56 0 1 1 112 0A56 56 0 1 1 456 88zM576 245.7v84.7c10-11.3 16-26.1 16-42.3s-6-31.1-16-42.3zM320 32a64 64 0 1 1 0 128 64 64 0 1 1 0-128zM240 304c0 16.2 6 31 16 42.3V261.7c-10 11.3-16 26.1-16 42.3zm144-42.3v84.7c10-11.3 16-26.1 16-42.3s-6-31.1-16-42.3zM448 304c0 44.7-26.2 83.2-64 101.2V448c0 17.7-14.3 32-32 32H288c-17.7 0-32-14.3-32-32V405.2c-37.8-18-64-56.5-64-101.2c0-61.9 50.1-112 112-112h32c61.9 0 112 50.1 112 112z"/>
+                </svg>
+                <span class="link-text">About&nbsp;us
+                </span>
+            </a>
+        </li>
+    </ul>
+</nav>
+<main>
+    <h1>I am the doctor drink</h1>
+    <p>Stumptown kale chips tonx intelligentsia photo booth, heirloom tofu. Heirloom bruh chia pitchfork, VHS four
+        dollar toast 8-bit 90's freegan. Blackbird spyplane meggings knausgaard kombucha paleo. Forage roof party
+        gorpcore venmo knausgaard chartreuse adaptogen pitchfork hella waistcoat everyday carry drinking vinegar.</p>
+    <p>Williamsburg semiotics blackbird spyplane kombucha palo santo actually helvetica hashtag tattooed cornhole</p>
+    <p>skateboard bicycle rights direct trade photo booth. Chartreuse venmo air plant stumptown fam austin cronut,</p>
+    <p>taxidermy food truck cloud bread. Sus kinfolk praxis chambray kogi. Hoodie farm-to-table listicle mukbang
+        ennui,</p>
+    <p>small batch meh fingerstache everyday carry enamel pin knausgaard la croix. Wayfarers vexillologist
+        microdosing,</p>
+    <p>pour-over 3 wolf moon paleo lo-fi swag yr.</p>
+    <p></p>
+    <p>Lomo marfa sartorial DSA, jawn echo park roof party affogato meditation banjo poke vaporware activated
+        charcoal.</p>
+    <p>Authentic tofu retro, selvage succulents glossier sus beard skateboard heirloom cronut hashtag trust fund
+        grailed.</p>
+    <p>Lomo meggings sriracha put a bird on it vinyl. Chartreuse tofu synth art party yes plz sriracha gastropub
+        vinyl</p>
+    <p>occupy street art sus artisan bushwick. Chambray cardigan actually, fixie glossier flexitarian affogato
+        hammock</p>
+    <p>lo-fi street art VHS polaroid. Mumblecore tofu banjo chartreuse flannel. Fanny pack yes plz vice neutral milk
+        hotel</p>
+    <p>raclette DIY.</p>
+    <p></p>
+    <p>Typewriter lyft austin subway tile skateboard shabby chic letterpress. +1 polaroid single-origin coffee tonx</p>
+    <p>distillery master cleanse. Flannel lumbersexual viral everyday carry fam, narwhal chambray knausgaard
+        succulents</p>
+    <p>tonx occupy tattooed DIY biodiesel. Man bun paleo Brooklyn, woke +1 trust fund jianbing praxis irony fanny
+        pack.</p>
+    <p>Fixie art party adaptogen farm-to-table, pork belly YOLO meh sartorial ascot gentrify plaid pabst vinyl.
+        Kogi</p>
+    <p>vibecession craft beer tumeric 90's.</p>
+    <p></p>
+    <p>Plaid gluten-free deep v street art glossier. Brooklyn cloud bread lyft vaporware polaroid praxis.
+        Asymmetrical</p>
+    <p>meggings salvia XOXO thundercats jawn. Etsy vibecession fashion axe organic, small batch yr raclette kale
+        chips</p>
+    <p>direct trade ascot mixtape pork belly tattooed hella. Organic vegan kombucha, iceland la croix roof party irony
+        meh</p>
+    <p>helvetica franzen locavore flannel +1 sustainable schlitz.</p>
+
+</main>
 
 
-<div class="body-wrap">
-    <div class="blobBackground"></div>
-
-    <div class="content">
-
-
-        <div class="parent">
-            <div class="div1">a</div>
-            <div class="div2">
-
-            </div>
-            <div class="div3"> c</div>
-            <div class="div4">
-                <nav class="menu">
-                    <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="div5"></div>
-            <div class="div6"></div>
-            <div class="div7"></div>
-            <div class="div8"></div>
-            <div class="div9"></div>
-        </div>
-
-
-        <div class="content">
-            <div id="home" class="page active">
-                <h2>Home</h2>
-                <p>This is the home page content.</p>
-            </div>
-            <div id="about" class="page">
-                <h2>About Us</h2>
-                <p>This is the about page content.</p>
-            </div>
-            <div id="services" class="page">
-                <h2>Our Services</h2>
-                <p>This is the services page content.</p>
-            </div>
-            <div id="contact" class="page">
-                <h2>Contact Us</h2>
-                <p>This is the contact page content.</p>
-            </div>
-        </div>
-
-        <script>
-            $(function () {
-                // Initially show home page
-                $('.page').removeClass('active');
-                $('#home').addClass('active');
-
-                // Handle navigation
-                $('nav a').on('click', function (event) {
-                    event.preventDefault();
-                    let targetPage = $(this).attr('href');
-                    $('.page').removeClass('active');
-                    $(targetPage).addClass('active');
-                });
-            });
-        </script>
-    </div>
-</div>
 </body>
-
 </html>
