--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <title>DR Drink</title>
+    <script
+            src="https://code.jquery.com/jquery-3.7.1.js"
+            integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+            crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -98,6 +102,22 @@
             meh</p>
         <p>helvetica franzen locavore flannel +1 sustainable schlitz.</p>
     </div>
+    <script>
+        $(function () {
+            // Initially show home page
+            $('.page').removeClass('active');
+            $('#home').addClass('active');
+
+            // Handle navigation
+            $('nav a').on('click', function (event) {
+                event.preventDefault();
+                let targetPage = $(this).attr('href');
+                $('.page').removeClass('active');
+                $(targetPage).addClass('active');
+            });
+        });
+    </script>
+
 </main>
 
 
