--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         hotel</p>
     <p>raclette DIY.</p>
     </div>
-<div id="weather">
+<div id="weather" class="page active">
     <h1>WEATHER</h1>
     <p>Typewriter lyft austin subway tile skateboard shabby chic letterpress. +1 polaroid single-origin coffee tonx</p>
     <p>distillery master cleanse. Flannel lumbersexual viral everyday carry fam, narwhal chambray knausgaard
@@ -95,7 +95,7 @@
         chips</p>
 
 </div>
-    <div id="About">
+    <div id="About" class="page">
         <h1>We just out here</h1>
 
         <p>direct trade ascot mixtape pork belly tattooed hella. Organic vegan kombucha, iceland la croix roof party irony
