--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
 
 <nav class="navbar">
     <ul class="navbar-nav">
+
+        <li class="nav-item">
+            <a href="#home" class="nav-link">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+                    <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                    <path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/>
+                </svg>
+                <span class="link-text">Home</span>
+            </a>
+
+        </li>
+
         <li class="nav-item">
             <a href="#weather" class="nav-link">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
@@ -52,53 +64,61 @@
     </ul>
 </nav>
 <main>
+    <div id="home" class="page">
+        <h1>Welcome home</h1>
+    </div>
     <div id="cocktails" class="page active">
 
-    <h1>Cocktails</h1>
-    <p>Stumptown kale chips tonx intelligentsia photo booth, heirloom tofu. Heirloom bruh chia pitchfork, VHS four
-        dollar toast 8-bit 90's freegan. Blackbird spyplane meggings knausgaard kombucha paleo. Forage roof party
-        gorpcore venmo knausgaard chartreuse adaptogen pitchfork hella waistcoat everyday carry drinking vinegar.</p>
-    <p>Williamsburg semiotics blackbird spyplane kombucha palo santo actually helvetica hashtag tattooed cornhole</p>
-    <p>skateboard bicycle rights direct trade photo booth. Chartreuse venmo air plant stumptown fam austin cronut,</p>
-    <p>taxidermy food truck cloud bread. Sus kinfolk praxis chambray kogi. Hoodie farm-to-table listicle mukbang
-        ennui,</p>
-    <p>small batch meh fingerstache everyday carry enamel pin knausgaard la croix. Wayfarers vexillologist
-        microdosing,</p>
-    <p>pour-over 3 wolf moon paleo lo-fi swag yr.</p>
-    <p></p>
-    <p>Lomo marfa sartorial DSA, jawn echo park roof party affogato meditation banjo poke vaporware activated
-        charcoal.</p>
-    <p>Authentic tofu retro, selvage succulents glossier sus beard skateboard heirloom cronut hashtag trust fund
-        grailed.</p>
-    <p>Lomo meggings sriracha put a bird on it vinyl. Chartreuse tofu synth art party yes plz sriracha gastropub
-        vinyl</p>
-    <p>occupy street art sus artisan bushwick. Chambray cardigan actually, fixie glossier flexitarian affogato
-        hammock</p>
-    <p>lo-fi street art VHS polaroid. Mumblecore tofu banjo chartreuse flannel. Fanny pack yes plz vice neutral milk
-        hotel</p>
-    <p>raclette DIY.</p>
+        <h1>Cocktails</h1>
+        <p>Stumptown kale chips tonx intelligentsia photo booth, heirloom tofu. Heirloom bruh chia pitchfork, VHS four
+            dollar toast 8-bit 90's freegan. Blackbird spyplane meggings knausgaard kombucha paleo. Forage roof party
+            gorpcore venmo knausgaard chartreuse adaptogen pitchfork hella waistcoat everyday carry drinking
+            vinegar.</p>
+        <p>Williamsburg semiotics blackbird spyplane kombucha palo santo actually helvetica hashtag tattooed
+            cornhole</p>
+        <p>skateboard bicycle rights direct trade photo booth. Chartreuse venmo air plant stumptown fam austin
+            cronut,</p>
+        <p>taxidermy food truck cloud bread. Sus kinfolk praxis chambray kogi. Hoodie farm-to-table listicle mukbang
+            ennui,</p>
+        <p>small batch meh fingerstache everyday carry enamel pin knausgaard la croix. Wayfarers vexillologist
+            microdosing,</p>
+        <p>pour-over 3 wolf moon paleo lo-fi swag yr.</p>
+        <p></p>
+        <p>Lomo marfa sartorial DSA, jawn echo park roof party affogato meditation banjo poke vaporware activated
+            charcoal.</p>
+        <p>Authentic tofu retro, selvage succulents glossier sus beard skateboard heirloom cronut hashtag trust fund
+            grailed.</p>
+        <p>Lomo meggings sriracha put a bird on it vinyl. Chartreuse tofu synth art party yes plz sriracha gastropub
+            vinyl</p>
+        <p>occupy street art sus artisan bushwick. Chambray cardigan actually, fixie glossier flexitarian affogato
+            hammock</p>
+        <p>lo-fi street art VHS polaroid. Mumblecore tofu banjo chartreuse flannel. Fanny pack yes plz vice neutral milk
+            hotel</p>
+        <p>raclette DIY.</p>
     </div>
-<div id="weather" class="page active">
-    <h1>WEATHER</h1>
-    <p>Typewriter lyft austin subway tile skateboard shabby chic letterpress. +1 polaroid single-origin coffee tonx</p>
-    <p>distillery master cleanse. Flannel lumbersexual viral everyday carry fam, narwhal chambray knausgaard
-        succulents</p>
-    <p>tonx occupy tattooed DIY biodiesel. Man bun paleo Brooklyn, woke +1 trust fund jianbing praxis irony fanny
-        pack.</p>
-    <p>Fixie art party adaptogen farm-to-table, pork belly YOLO meh sartorial ascot gentrify plaid pabst vinyl.
-        Kogi</p>
-    <p>vibecession craft beer tumeric 90's.</p>
-    <p></p>
-    <p>Plaid gluten-free deep v street art glossier. Brooklyn cloud bread lyft vaporware polaroid praxis.
-        Asymmetrical</p>
-    <p>meggings salvia XOXO thundercats jawn. Etsy vibecession fashion axe organic, small batch yr raclette kale
-        chips</p>
+    <div id="weather" class="page active">
+        <h1>WEATHER</h1>
+        <p>Typewriter lyft austin subway tile skateboard shabby chic letterpress. +1 polaroid single-origin coffee
+            tonx</p>
+        <p>distillery master cleanse. Flannel lumbersexual viral everyday carry fam, narwhal chambray knausgaard
+            succulents</p>
+        <p>tonx occupy tattooed DIY biodiesel. Man bun paleo Brooklyn, woke +1 trust fund jianbing praxis irony fanny
+            pack.</p>
+        <p>Fixie art party adaptogen farm-to-table, pork belly YOLO meh sartorial ascot gentrify plaid pabst vinyl.
+            Kogi</p>
+        <p>vibecession craft beer tumeric 90's.</p>
+        <p></p>
+        <p>Plaid gluten-free deep v street art glossier. Brooklyn cloud bread lyft vaporware polaroid praxis.
+            Asymmetrical</p>
+        <p>meggings salvia XOXO thundercats jawn. Etsy vibecession fashion axe organic, small batch yr raclette kale
+            chips</p>
 
-</div>
+    </div>
     <div id="About" class="page">
         <h1>We just out here</h1>
 
-        <p>direct trade ascot mixtape pork belly tattooed hella. Organic vegan kombucha, iceland la croix roof party irony
+        <p>direct trade ascot mixtape pork belly tattooed hella. Organic vegan kombucha, iceland la croix roof party
+            irony
             meh</p>
         <p>helvetica franzen locavore flannel +1 sustainable schlitz.</p>
     </div>
@@ -110,7 +130,7 @@
 
             // Handle navigation
             $('nav a').on('click', function (event) {
-                event.preventDefault();
+                event.preventDefault(); //Description: If this method is called, the default action of the event will not be triggered.
                 let targetPage = $(this).attr('href');
                 $('.page').removeClass('active');
                 $(targetPage).addClass('active');
