--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="main.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
@@ -122,21 +123,7 @@
             meh</p>
         <p>helvetica franzen locavore flannel +1 sustainable schlitz.</p>
     </div>
-    <script>
-        $(function () {
-            // Initially show home page
-            $('.page').removeClass('active');
-            $('#home').addClass('active');
-
-            // Handle navigation
-            $('nav a').on('click', function (event) {
-                event.preventDefault(); //Description: If this method is called, the default action of the event will not be triggered.
-                let targetPage = $(this).attr('href');
-                $('.page').removeClass('active');
-                $(targetPage).addClass('active');
-            });
-        });
-    </script>
+ 
 
 </main>
 
