--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </a>
         </li>
 
-        <li class="nav-item">
+        <li class="nav-item cocktails">
             <a href="#cocktails" class="nav-link">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                     <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
