--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
+<div id="categories" class="categoriesBar">
+    <div onclick="closeNav()" class="categoriesBarCloseBtn">X</div>
+</div>
+<nav id="navigator" class="navbar">
 
-<nav class="navbar">
     <ul class="navbar-nav">
 
         <li class="nav-item">
@@ -53,9 +56,9 @@
                     </a>
                 </span>
             <div class="dropdown-content">
-                <a href="#">Categories&nbsp;&nbsp;<span>&#187;</span></a>
-                <a href="#">Search</a>
-                <a href="#">Feeling lucky</a>
+               <span onclick="openNav()" class="dropdownTile">Categories&nbsp;&nbsp;&#187;</span>
+                <span class="dropdownTile">Search</span>
+                <span class="dropdownTile">Feeling lucky</span>
             </div>
         </li>
 
@@ -72,6 +75,7 @@
         </li>
     </ul>
 </nav>
+
 <main>
     <div id="home" class="page">
         <h1>Welcome home</h1>
