--- a/index.html
+++ b/index.html
@@ -15,7 +15,25 @@
 </head>
 <body>
 <div id="categories" class="categoriesBar">
-    <div onclick="closeNav()" class="categoriesBarCloseBtn">X</div>
+    <div class= "katBarWrapper">
+        <div class="CatsInAWrap">
+            <div class="AllDrinkCategories">
+                <div class="categoriesButton">Ordinary&nbsp;Drink</div>
+                <div class="categoriesButton">Cocktail</div>
+                <div class="categoriesButton">Shake</div>
+                <div class="categoriesButton">Soft&nbsp;Drink</div>
+                <div class="categoriesButton">Cocoa</div>
+                <div class="categoriesButton">Shot</div>
+                <div class="categoriesButton">Coffee&nbsp;/&nbsp;Tea</div>
+                <div class="categoriesButton">Homemade&nbsp;Liqueur</div>
+                <div class="categoriesButton">Punch&nbsp;/&nbsp;Party&nbsp;Drink</div>
+                <div class="categoriesButton">Beer</div>
+                <div class="categoriesButton">Other&nbsp;/&nbsp;Unknown</div>
+            </div>
+        </div>
+        <div class="categoriesBarCloseBtn" onclick="closeNav()">X</div>
+    </div>
+
 </div>
 <nav id="navigator" class="navbar">
 
