--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div id="categories" class="categoriesBar">
     <div class= "katBarWrapper">
         <div class="CatsInAWrap">
-            <div class="AllDrinkCategories">
+            <div id="ADC" class="AllDrinkCategories">
                 <div class="categoriesButton">Ordinary&nbsp;Drink</div>
                 <div class="categoriesButton">Cocktail</div>
                 <div class="categoriesButton">Shake</div>
