--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
         <h1>Welcome home</h1>
     </div>
     <div id="cocktails" class="page active">
+        <div id="CPC" class="cocktailsPageCategories">
 
+        </div>
         <h1>Cocktails</h1>
         <p>Stumptown kale chips tonx intelligentsia photo booth, heirloom tofu. Heirloom bruh chia pitchfork, VHS four
             dollar toast 8-bit 90's freegan. Blackbird spyplane meggings knausgaard kombucha paleo. Forage roof party
