--- a/index.html
+++ b/index.html
@@ -87,36 +87,42 @@
     <div id="home" class="page">
         <h1>Welcome home</h1>
     </div>
-    <div id="cocktails" class="page active">
-        <div id="CPC" class="cocktailsPageCategories">
 
+    <div id="cocktails" class="page active">
+        <div class="cocktailsContent">
+            <div id="CPC" class="cocktailsPageCategories">
+            </div>
+            <div id="CD" class="cocktailsData">
+                <h1>Cocktails</h1>
+<!--                <p>Stumptown kale chips tonx intelligentsia photo booth, heirloom tofu. Heirloom bruh chia pitchfork, VHS four-->
+<!--                    dollar toast 8-bit 90's freegan. Blackbird spyplane meggings knausgaard kombucha paleo. Forage roof party-->
+<!--                    gorpcore venmo knausgaard chartreuse adaptogen pitchfork hella waistcoat everyday carry drinking-->
+<!--                    vinegar.</p>-->
+<!--                <p>Williamsburg semiotics blackbird spyplane kombucha palo santo actually helvetica hashtag tattooed-->
+<!--                    cornhole</p>-->
+<!--                <p>skateboard bicycle rights direct trade photo booth. Chartreuse venmo air plant stumptown fam austin-->
+<!--                    cronut,</p>-->
+<!--                <p>taxidermy food truck cloud bread. Sus kinfolk praxis chambray kogi. Hoodie farm-to-table listicle mukbang-->
+<!--                    ennui,</p>-->
+<!--                <p>small batch meh fingerstache everyday carry enamel pin knausgaard la croix. Wayfarers vexillologist-->
+<!--                    microdosing,</p>-->
+<!--                <p>pour-over 3 wolf moon paleo lo-fi swag yr.</p>-->
+<!--                <p></p>-->
+<!--                <p>Lomo marfa sartorial DSA, jawn echo park roof party affogato meditation banjo poke vaporware activated-->
+<!--                    charcoal.</p>-->
+<!--                <p>Authentic tofu retro, selvage succulents glossier sus beard skateboard heirloom cronut hashtag trust fund-->
+<!--                    grailed.</p>-->
+<!--                <p>Lomo meggings sriracha put a bird on it vinyl. Chartreuse tofu synth art party yes plz sriracha gastropub-->
+<!--                    vinyl</p>-->
+<!--                <p>occupy street art sus artisan bushwick. Chambray cardigan actually, fixie glossier flexitarian affogato-->
+<!--                    hammock</p>-->
+<!--                <p>lo-fi street art VHS polaroid. Mumblecore tofu banjo chartreuse flannel. Fanny pack yes plz vice neutral milk-->
+<!--                    hotel</p>-->
+<!--                <p>raclette DIY.</p>-->
+
+            </div>
         </div>
-        <h1>Cocktails</h1>
-        <p>Stumptown kale chips tonx intelligentsia photo booth, heirloom tofu. Heirloom bruh chia pitchfork, VHS four
-            dollar toast 8-bit 90's freegan. Blackbird spyplane meggings knausgaard kombucha paleo. Forage roof party
-            gorpcore venmo knausgaard chartreuse adaptogen pitchfork hella waistcoat everyday carry drinking
-            vinegar.</p>
-        <p>Williamsburg semiotics blackbird spyplane kombucha palo santo actually helvetica hashtag tattooed
-            cornhole</p>
-        <p>skateboard bicycle rights direct trade photo booth. Chartreuse venmo air plant stumptown fam austin
-            cronut,</p>
-        <p>taxidermy food truck cloud bread. Sus kinfolk praxis chambray kogi. Hoodie farm-to-table listicle mukbang
-            ennui,</p>
-        <p>small batch meh fingerstache everyday carry enamel pin knausgaard la croix. Wayfarers vexillologist
-            microdosing,</p>
-        <p>pour-over 3 wolf moon paleo lo-fi swag yr.</p>
-        <p></p>
-        <p>Lomo marfa sartorial DSA, jawn echo park roof party affogato meditation banjo poke vaporware activated
-            charcoal.</p>
-        <p>Authentic tofu retro, selvage succulents glossier sus beard skateboard heirloom cronut hashtag trust fund
-            grailed.</p>
-        <p>Lomo meggings sriracha put a bird on it vinyl. Chartreuse tofu synth art party yes plz sriracha gastropub
-            vinyl</p>
-        <p>occupy street art sus artisan bushwick. Chambray cardigan actually, fixie glossier flexitarian affogato
-            hammock</p>
-        <p>lo-fi street art VHS polaroid. Mumblecore tofu banjo chartreuse flannel. Fanny pack yes plz vice neutral milk
-            hotel</p>
-        <p>raclette DIY.</p>
+
     </div>
     <div id="weather" class="page active">
         <h1>WEATHER</h1>
