--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="cocktailsContent">
             <div id="CPC" class="cocktailsPageCategories">
             </div>
-            <h1>Cocktails</h1>
+            <h1 id="catTitle">Cocktails</h1>
             <div id="CD" class="cocktailsData">
 
 <!--                <p>Stumptown kale chips tonx intelligentsia photo booth, heirloom tofu. Heirloom bruh chia pitchfork, VHS four-->
