--- a/index.html
+++ b/index.html
@@ -82,7 +82,22 @@
         </li>
     </ul>
 </nav>
-
+<div class="cocktailInfoPage">
+    <div id="CloseInfoPage" onclick="closeInfoRecipe()">Close</div>
+    <h1 id="title">Tester</h1>
+    <h3 id="category">Category</h3>
+    <h3 id="glassType">Glass Type</h3>
+    <div class="ingredientsWrapper">
+        <h2 id="ingredientsTitle">Ingredients</h2>
+        <ul id="ingredientsUL">
+            <li>An ingredient</li>
+        </ul>
+    </div>
+    <div class="instructionsWrapper">
+        <h2 id="InstructionsTitle">Instructions</h2>
+        <p id="InstructionsParagraph">Recipe</p>
+    </div>
+</div>
 <main>
     <div id="home" class="page">
         <h1>Welcome home</h1>
