--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <nav id="navigator" class="navbar">
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a href="#home" onclick="recetteAleatoire()" class="nav-link">
+            <a href="#home" onclick="recetteAleatoire()" class="nav-link"> ASDASD
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                     <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                     <path
