--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <nav id="navigator" class="navbar">
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a href="#home" onclick="recetteAleatoire()" class="nav-link"> ASDASD
+            <a href="#home" onclick="recetteAleatoire()" class="nav-link"> 
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                     <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                     <path
@@ -57,7 +57,7 @@
             <span onclick="openNav()" class="dropdownTile"
             >Categories&nbsp;&nbsp;&#187;</span
             >
-                <span class="dropdownTile">Search</span>
+                <span class="dropdownTile" >Search</span>
                 <span class="dropdownTile" >Feeling lucky</span>
             </div>
         </li>
@@ -128,7 +128,7 @@
     <div id="home" class="page">
         <h1>Welcome to DR DRINK</h1>
         <h2>Here's a random cocktail that you should try</h2>
-        <div id="HomeDrinks" class="cocktailsData"></div>
+        <div id="HomeDrinks" ></div>
     </div>
 
     <div id="cocktails" class="page active">
