Added searching by letter and id simplified

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <span onclick="openNav()" class="dropdownTile"
             >Categories&nbsp;&nbsp;&#187;</span
             >
-                <span class="dropdownTile" >Search</span>
+                <a href="#search" class="dropdownTile"  >Search</a>
                 <span class="dropdownTile" >Feeling lucky</span>
             </div>
         </li>
