--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
             href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
             rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="styles.css"/>
     <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
     <title>DR Drink</title>
     <script
             src="https://code.jquery.com/jquery-3.7.1.js"
             integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
             crossorigin="anonymous"
     ></script>
+
     <script src="vue.js"></script>
 </head>
 <body>
@@ -24,6 +27,7 @@
             <div id="ADC" class="AllDrinkCategories"></div>
         </div>
         <div class="categoriesBarCloseBtn" onclick="CloseNav()">X</div>
+
     </div>
 </div>
 <nav id="navigator" class="navbar">
@@ -135,7 +139,7 @@
     <div id="cocktails" class="page active">
         <div class="cocktailsContent">
             <div id="CPC" class="cocktailsPageCategories"></div>
-            <h1 id="catTitle">Cocktails</h1>
+            <h1 id="catTitle">Choose a category</h1>
             <div id="CD" class="cocktailsData">
             </div>
         </div>
