Fixed small bug that caused movement to weather info when hovering cocktails in the original css class

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <i class="material-symbols-outlined">sunny</i>
                 <span class="link-text">Weather</span>
             </a>
-            <a href="#weather" class="nav-link">
+            <a href="#weather" class="nav-links">
                     <span class="link-text">
                     <span class="link-text" id="cityBar"></span>
                     <span class="link-text" id="temperatureBar"></span>
