Refactor weather info display in navigation bar
Simplified the HTML structure for the weather information in the navigation bar by consolidating multiple anchor tags into one and wrapping the info in a div. Additionally, modified the CSS to accommodate the new HTML structure, adding a flex layout to make the elements align vertically.

--- a/index.html
+++ b/index.html
@@ -64,16 +64,14 @@
             </a>
         </li>
         <li class="nav-item">
-            <a href="#weather" class="nav-link">
-                <i class="material-symbols-outlined">sunny</i>
-                <span class="link-text">Weather</span>
-            </a>
-            <a href="#weather" class="nav-links">
-                    <span class="link-text">
-                    <span class="link-text" id="cityBar"></span>
-                    <span class="link-text" id="temperatureBar"></span>
-                    <span class="link-text" id="feelsLikeBar"></span>
-                    </span>
+            <a  id="WeatherInfoInBar" href="#weather"  class="nav-link">
+                <span><i class="material-symbols-outlined">sunny</i>
+                <span class="link-text">Weather</span></span>
+                <div >
+                <span class="link-text" id="cityBar"></span>
+                <span class="link-text" id="temperatureBar"></span>
+                <span class="link-text" id="feelsLikeBar"></span>
+                </div>
             </a>
         </li>
         <!-- TODO   make it that depending on the weather, change the icon-->
