burger go BRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR

--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
     </div>
 </div>
 <nav id="navigator" class="navbar">
-
-
+    <div id="burGer" class="burger">
+    <span class="material-symbols-outlined">menu</span>
+    </div>
     <ul class="navbar-nav">
+
         <li class="nav-item">
             <a href="#home" onclick="ShowRandom()" class="nav-link">
                 <i class="material-symbols-outlined">home</i>
