--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </div>
 <nav id="navigator" class="navbar">
     <div id="burGer" class="burger">
-    <span class="material-symbols-outlined">menu</span>
+    <span id="burgerICON" class="material-symbols-outlined">menu</span>
     </div>
     <ul class="navbar-nav">
 
