--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
             <p id="temperature"></p>
             <p id="feelsLike"></p>
             <p id="weather-description"></p>
+            <p id="weatherIcon"></p>
 
         </div>
     </div>
