Update weather icons and refactor js
The HTML code has been modified to give the weather icon an ID in the navigation bar, and the JavaScript file has been heavily refactored to include two new functions that retrieve weather icons based on the weather conditions. The XML response handling function has also been updated to use one of the new functions and to retrieve the weather group number.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </li>
         <li class="nav-item">
             <a  id="WeatherInfoInBar" href="#weather"  class="nav-link">
-                <span><i class="material-symbols-outlined">sunny</i>
+                <span><i id="weatherIcon" class="material-symbols-outlined">sunny</i>
                 <span class="link-text">Weather</span></span>
                 <div >
                 <span class="link-text" id="cityBar"></span>
@@ -125,8 +125,10 @@
             <p id="temperature"></p>
             <p id="feelsLike"></p>
             <p id="weather-description"></p>
-            <p id="weatherIcon"></p>
+<!--            <i class="material-symbols-outlined" id="weatherIcon">&#10d;</i>-->
+            <div id="iconImageHolder">
 
+            </div>
         </div>
     </div>
     <div id="About" class="page">
